Fix import scipy.stats error and local image errors

--- a/PyBayTalks/2019/AB-Testing-Python/Code/0-ABTesting-Presentation-2019.ipynb
+++ b/PyBayTalks/2019/AB-Testing-Python/Code/0-ABTesting-Presentation-2019.ipynb
@@ -75,7 +75,7 @@
     "Allen Downey once simplified A/B tests, more generally hypothesis tests, in the following steps:\n",
     "\n",
     "\n",
-    "![AB Testing Format](../Resources/Images/ABTesting-Format.PNG)\n",
+    "![AB Testing Format](../Resources/Images/ABTesting-Format.png)\n",
     "\n",
     "(Source: [“Probably Overthinking It” by Allen Downey](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html))\n"
    ]
@@ -86,7 +86,7 @@
    "source": [
     "BUT what are Hypothesis Tests? These tests essentially the prior/less modern statistical experimental design framework of A/B tests. That being said, some people believe to see that A/B tests were borrowed/taken from the Statistics world, and labeled an edgy/cool name to distinguish iteself.\n",
     "\n",
-    "![Not Lame](../Resources/Images/not_lame_meme.PNG)\n",
+    "![Not Lame](../Resources/Images/not_lame_meme.png)\n",
     "    "
    ]
   },
@@ -164,7 +164,7 @@
     "\n",
     "Let's disgress from the brief background, and head back to the general overview intially seen in 1.3:\n",
     "\n",
-    "![AB Testing Format](../Resources/Images/ABTesting-Format.PNG)\n",
+    "![AB Testing Format](../Resources/Images/ABTesting-Format.png)\n",
     "\n",
     "(Source: [“Probably Overthinking It” by Allen Downey](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html))\n"
    ]
@@ -1775,23 +1775,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'stats' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-f619d2e16dc9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchiSquareStat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpVal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchi2_contingency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwoByTwo_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Expected Table: \\n'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# interpret test-statistic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'stats' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected Table: \n",
+      " [[ 827.5  772.5 1600. ]\n",
+      " [ 827.5  772.5 1600. ]] \n",
+      "\n",
+      "Degrees of Freedom: 2\n",
+      "\n",
+      "probability=0.95, critical=5.99, stat=0.05 \n",
+      "\n",
+      "Decision:\n",
+      "For significance level 0.05,\n",
+      "\n",
+      "We fail to reject the Null Hypothesis, H_0\n",
+      "\n",
+      "for p = 0.95 < 5.991464547107979.\n"
      ]
     }
    ],
    "source": [
-    "chiSquareStat, pVal, dof, expected = stats.chi2_contingency(twoByTwo_df)\n",
+    "chiSquareStat, pVal, dof, expected = scipy.stats.chi2_contingency(twoByTwo_df)\n",
     "\n",
     "print('Expected Table: \\n',expected,'\\n')\n",
     "\n",
@@ -1799,7 +1808,7 @@
     "prob = 0.95\n",
     "alpha = 1.0 - prob\n",
     "\n",
-    "criticalVal = stats.chi2.ppf(prob, dof)\n",
+    "criticalVal = scipy.stats.chi2.ppf(prob, dof)\n",
     "\n",
     "print(f'Degrees of Freedom: {dof}\\n')\n",
     "print('probability=%.2f, critical=%.2f, stat=%.2f \\n' % (prob, criticalVal, alpha))\n",
