Add Welche's t-test and minor notes in section 4

--- a/PyBayTalks/2019/AB-Testing-Python/Code/0-ABTesting-Presentation-2019.ipynb
+++ b/PyBayTalks/2019/AB-Testing-Python/Code/0-ABTesting-Presentation-2019.ipynb
@@ -1174,8 +1174,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the calculated t-statistic $t$ > critical value $t^*$, then we reject the null hypothesis $H_0$, and accept the alternative hypothesis $H_1$. \n",
+    "If the calculated t-statistic $t$ > critical value $t^*$, then we reject the null hypothesis $H_0$, and accept the alternative hypothesis $H_1$.\n",
+    "\n",
+    "\n",
     "> Equivalently, if $p < \\alpha$, then we  reject the null hypothesis $H_0$. \n",
+    "\n",
+    ">> P-value is the probability of obtaining an effect at least as extreme as the one in your sample data, assuming null hypothesis is true.\n",
+    "\n",
+    "It does not measure support for alternative hypothesis\n",
     "\n",
     "If not, then we fail to reject the null hypothesis $H_0$. "
    ]
@@ -1488,16 +1494,39 @@
     "        * P(one significant result) = 1−P(no significant results) \n",
     "        * P(one significant result) = 1−(1−0.05)^20 = 0.64\n",
     "    * Avoid this by the Bonferroni Correction\n",
-    "    \n",
-    "## 4.7 Other\n",
+    "\n",
+    "## 4.8 On the note of the Decision Tree image...\n",
+    "\n",
+    "Differences between z & t tests:\n",
+    "\n",
+    "* z-test: A z-test assumes observations are independently drawn from Normal Distribution with unknown mean and known variance. Z-test is used when we have quantitative data.\n",
+    "\n",
+    "* t-test: a t-test assumes observations are independently drawn from Normal distribution with unknown mean and unknown variance. With a t-test, we do not know the population variance.\n",
+    "\n",
+    "## 4.9 Other\n",
     "\n",
     "* Ethics\n",
     "    * Do your users know about being tested on?\n",
     "    * Privacy concerns \n",
     "    * Post-testing effects on participants\n",
+    "        * IRB (Institutional Review Board) is not necessary unless farmful actions happen to test participants\n",
+    "        * Formal and regulated tests require knowledge of privacy, choice, risk, and informed consent\n",
     "    \n",
     "    \n",
-    "* Novelty Effect or Change Aversion: Post-test Cohort analysis may be helpful in evaluation if testing was valid for users, after some timeframe after the test.\n"
+    "* Novelty Effect or Change Aversion: Post-test Cohort analysis may be helpful in evaluation if testing was valid for users, after some timeframe after the test.\n",
+    "\n",
+    "### 4.9.1 Other: Welche's T-test (T test with unequal variance or observations)\n",
+    "\n",
+    "Equal or unequal sample sizes, unequal variances\n",
+    "This test, also known as Welch's t-test, is used only when two population variances are not assumed to be equal (the two sample sizes may or may not be equal) and hence must be estimated seperately. The t-stat to test whether population means are different is\n",
+    "\n",
+    "$t= \\tfrac{\\bar{X}_1 - \\bar{X}_2}{s_{\\bar{\\Delta}}}$\n",
+    "\n",
+    "where $s_{\\bar{\\Delta}} = \\sqrt{\\tfrac{s^2_1}{n_1} + \\tfrac{s^2_2}{n_2}}$\n",
+    "\n",
+    "d.f. = $\\tfrac{(\\tfrac{s^2_1}{n_1} + \\tfrac{s^2_2}{n_2})^2}{\\tfrac{(\\tfrac{s^2_1}{n_1})^2}{n_1 - 1} + \\tfrac{(\\tfrac{s^2_2}{n_2})^2}{n_2 - 1}}$\n",
+    "\n",
+    "This d.f. is known as the Welch-Satterthwaite equation."
    ]
   },
   {
