Add problem jupyter notebook and solutions jupyter notebook

--- a/PyBayTalks/2019/AB-Testing-Python/Code/1-ABTesting-Presentation-2019-Solutions.ipynb
+++ b/PyBayTalks/2019/AB-Testing-Python/Code/1-ABTesting-Presentation-2019-Solutions.ipynb
@@ -560,12 +560,12 @@
     }
    ],
    "source": [
-    "t_est = 2 #{Enter value here}\n",
-    "p_est = .51 #{Enter value here}\n",
-    "mde = .05 #{Enter value here}\n",
+    "t_est = #{Enter value here}\n",
+    "p_est =  #{Enter value here}\n",
+    "mde = #{Enter value here}\n",
     "\n",
     "# Construct the estimated sample size n_mde, from the formula above \n",
-    "n_mde = (4) * (p_est * (1- p_est)) * (1.96/.05)**2\n",
+    "n_mde = #{Enter formula here}\n",
     "\n",
     "print(f'Example\\'s Estimated MDE is: {round(n_mde, 0)}')"
    ]
@@ -827,7 +827,7 @@
    ],
    "source": [
     "# Check out the first 3 columns of dataframe campaign1\n",
-    "campaign1.head(3)"
+    "#{Generate Dataframe with first 3 rows here}"
    ]
   },
   {
@@ -902,7 +902,7 @@
    ],
    "source": [
     "# Check out the first 3 columns of dataframe campaign2\n",
-    "campaign2.head(3)"
+    "#{Generate Dataframe with first 3 rows here}"
    ]
   },
   {
@@ -948,10 +948,10 @@
    "outputs": [],
    "source": [
     "# Calculate the CTR for Dataframe column campaign1['CTR']\n",
-    "campaign1['CTR'] = campaign1['Click'] / (campaign1['No Click']+campaign1['Click'])\n",
+    "campaign1['CTR'] = #{Enter CTR formula here}\n",
     "\n",
     "# Calculate the CTR for Dataframe column campaign2['CTR']\n",
-    "campaign2['CTR'] = campaign2['Click'] / (campaign2['No Click'] +campaign2['Click'])"
+    "campaign2['CTR'] = #{Enter CTR formula here}"
    ]
   },
   {
@@ -1082,15 +1082,16 @@
     "    \n",
     "    ## Term 1\n",
     "    ### Calculate the first term p_1 * (1-p_1) /n_1\n",
-    "    se1 = (p1 * (1- p1))/n1\n",
-    "\n",
+    "    se1  = # {Create the first term within the SE, in the denominator of t-stats}\n",
+    "    \n",
     "    ## Term 2\n",
     "    ### Calculate the first term p_2 * (1-p_2) /n_2\n",
-    "    se2 = (p2 * (1- p2))/n2\n",
+    "    \n",
+    "    se2 = # {Create the second term within the SE, in the denominator of t-stats}\n",
     "    \n",
     "    ##### Terms being squared for final result.\n",
     "    ####### sqrt( SE_1 + SE_2)\n",
-    "    standardError = np.sqrt(se1 + se2)\n",
+    "    standardError = # {Enter formula here}\n",
     "    \n",
     "    \n",
     "    # T statistic calculation.\n",
@@ -1117,8 +1118,7 @@
     "    ### Calcualte the p-value using a Cumulative Density function\n",
     "    ### from Scipy's stats.t.cdf(t-test, DoF) function\n",
     "    \n",
-    "    p_val = (1 - scipy.stats.t.cdf(abs(tStatistic), df \\\n",
-    "                                   = (n1 + n2-2)) ) * 2.0\n",
+    "    p_val = #{enter calculation w/function from above, here}\n",
     "    \n",
     "    if output_bool is True:\n",
     "        print('Analysis:\\n\\n')\n",
@@ -1275,10 +1275,13 @@
    "source": [
     "# Try out the Independent T-Test w/Equal Variance function from Scipy's \n",
     "# stats.ttest_ind(group 1, group 2, equal_var = ?)\n",
+    "### Remember, groups are of series campaign2['CTR'] in Dataframe campaign2\n",
+    "\n",
     "\n",
     "tTest_statistic, tTest_pval = scipy.stats.ttest_ind(campaign2['CTR'], \\\n",
     "                                                    campaign1['CTR'], \\\n",
     "                                                    equal_var = True)\n",
+    "\n",
     "print(f'Scipy\\'s Calculated t-statistic is {round(tTest_statistic,2)}' + \\\n",
     "      f' and p-value is {tTest_pval}')"
    ]
