--- a/PyData/2019/AB-Testing-Python/Code/1-ABTesting-Presentation-2019-Solutions.ipynb
+++ b/PyData/2019/AB-Testing-Python/Code/1-ABTesting-Presentation-2019-Solutions.ipynb
@@ -26,7 +26,7 @@
     "* Resources\n",
     "\n",
     "    * **Repository Link:** [http://bit.ly/Raul-ABTesting-PyDataLA](http://bit.ly/Raul-ABTesting-PyDataLA)\n",
-    "    * **Google Colab version** of [this Jupyter Noteobok](https://drive.google.com/file/d/1XbyBPUUV9_5r89iZ9IATtQD23Jr0e9J8/view?usp=sharing)\n"
+    "    * **Google Colab version** of [this Jupyter Noteobok](https://colab.research.google.com/drive/1AhcqoS584byUUwmjvimnxEpn1ho9n0uV#offline=true&sandboxMode=true)\n"
    ]
   },
   {
@@ -48,7 +48,7 @@
     "Today you'll have the opportunity to learn \"online experimentation\" scenario with A/B testing in Python.\n",
     "\n",
     "\n",
-    "> Note: There exists **proprietary** A/B testing solutions like [Optimizely](https://www.optimizely.com/), [VWO](https://vwo.com/campaign/get-started/?utm_source=google&utm_medium=paid&utm_campaign=mof_search_brand_vwo_brand&utm_content=308583203468&utm_term=vwo&gclid=Cj0KCQjwv8nqBRDGARIsAHfR9wD7uaDnZRUDFKrXDtcn8jCv4v_dNhSRxzWsddKQAo0WuREO4phZ1PQaAopsEALw_wcB), [AB Tasty](https://www.abtasty.com/), [Google Optimize](https://optimize.google.com/optimize/home/). Moreover, there are *Open Source* solutions like Scipy, StatsModel, and more. \n",
+    "> Note: There exists **proprietary** A/B testing solutions like [Optimizely](https://www.optimizely.com/), [VWO](https://vwo.com/campaign/get-started/?utm_source=google&utm_medium=paid&utm_campaign=mof_search_brand_vwo_brand&utm_content=308583203468&utm_term=vwo&gclid=Cj0KCQjwv8nqBRDGARIsAHfR9wD7uaDnZRUDFKrXDtcn8jCv4v_dNhSRxzWsddKQAo0WuREO4phZ1PQaAopsEALw_wcB), [AB Tasty](https://www.abtasty.com/), [Google Optimize](https://optimize.google.com/optimize/home/). Moreover, there are *Open Source* functions in solutions like Scipy, StatsModel, packages Planout, Wasabi, and more. \n",
     ">\n",
     ">However, this presentations shows the raw formualization for constructing an A/B test.\n",
     "\n",
@@ -83,17 +83,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#OS Items\n",
     "import os\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "#Data Objects\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Statistical Packages\n",
     "import scipy\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "#Visualizations\n",
     "import seaborn as sns\n",
     "sns.set_style(\"dark\")\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "\n"
    ]
   },
   {
@@ -104,7 +111,13 @@
    "source": [
     "### Note: If package faker is not installed, \n",
     "##### comment and apply the below package.\n",
-    "# !pip install faker"
+    "# !pip install faker\n",
+    "\n",
+    "# Other Packages\n",
+    "# !conda install pandas\n",
+    "# !conda install scipy\n",
+    "# !conda install numpy\n",
+    "# !conda install seaborn"
    ]
   },
   {
@@ -160,35 +173,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.3  Stats 101, a brief review"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of the utilized Statistical concepts:\n",
-    "\n",
-    "| Name     | Definition          | \n",
-    "|----------|-----------------------|\n",
-    "| Mean ($\\mu$) | $\\tfrac{\\sum_{i=1}^N  X_i}{n}$  |\n",
-    "| Variance $ (\\sigma^2$) | $ \\tfrac{\\sum_{i=1}^N {(x_i -\\mu)^2}}{N}$| \n",
-    "| Standard Deviation ($\\sigma $) | $ \\sqrt{ \\tfrac{\\sum_{i=1}^N {(x_i -\\mu)^2}}{N}} $  |\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Intermission--Create Fake Dataset:\n",
+    "# [Optional, Ignore]--Create Fake Dataset:\n",
     "\n",
     "def campaign_period(startDate, endDate):\n",
+    "    '''\n",
+    "    @return: Array of values between two periods\n",
+    "    '''\n",
     "    from datetime import datetime, timedelta\n",
     "    \n",
     "    endDate_dt = datetime.strptime(endDate, '%m-%d-%Y')\n",
@@ -200,9 +195,13 @@
     "    return(date_list)\n",
     "    #Inspiration via  https://stackoverflow.com/questions/993358/creating-a-range-of-dates-in-python\n",
     "    \n",
+    "    \n",
     "def campaign_dataset_generator(campaignName = 'PersonDoe-Campaign2019-n', \\\n",
     "                               weightArray=[.5,.5], sample_size = 100, \\\n",
     "                               timeframe = ['10-1-2019', '12-03-2019']):\n",
+    "    '''\n",
+    "    @return: Generate Campaign Dataset, from generated data\n",
+    "    '''\n",
     "    import random\n",
     "    from faker import Faker\n",
     "    faker = Faker()\n",
@@ -218,7 +217,9 @@
     "def campaign_df_generator(matrix,columns):\n",
     "    campaignsDataset = pd.DataFrame(matrix,\\\n",
     "                                columns = columns)\n",
-    "    \n",
+    "    '''\n",
+    "    @return: Generate Dataframe version of a Campaign Dataset\n",
+    "    '''  \n",
     "    campaignsDataset.sort_values(by='Date',\\\n",
     "                             ascending=True, inplace = True)\n",
     "    campaignsDataset = campaignsDataset.pivot_table(index=['Date','Campaign'],\\\n",
@@ -238,6 +239,7 @@
     "\n",
     "    return(returnedObjects)\n",
     "\n",
+    "# A hack way to generate two Ad Campaign datasets\n",
     "def express_campaign_df_generator(campaignList,weightMatrix, sample_size):\n",
     "    firstCamp = campaign_dataset_generator(campaignList[0],weightMatrix[0], sample_size)\n",
     "    secondCamp = campaign_dataset_generator(campaignList[1],weightMatrix[1], sample_size)\n",
@@ -252,11 +254,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3  Stats 101, a brief review [Optional]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the utilized Statistical concepts:\n",
+    "\n",
+    "| Name     | Definition          | \n",
+    "|----------|-----------------------|\n",
+    "| Mean ($\\mu$) | $\\tfrac{\\sum_{i=1}^N  X_i}{n}$  |\n",
+    "| Variance $ (\\sigma^2$) | $ \\tfrac{\\sum_{i=1}^N {(x_i -\\mu)^2}}{N}$| \n",
+    "| Standard Deviation ($\\sigma $) | $ \\sqrt{ \\tfrac{\\sum_{i=1}^N {(x_i -\\mu)^2}}{N}} $  |\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Custom distribution plot function.\n",
+    "# Function uses Seaborn's Distplot.\n",
+    "\n",
     "def distribution_plot(series, series2=None, name_of_campaign = ''):\n",
     "\n",
     "    sns.distplot( series['CTR'], hist=True, kde=True, \\\n",
@@ -274,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## [Optional] Quick location to change the size for the following datasets\n",
+    "## Dataset size \n",
     "size = 1600"
    ]
   },
@@ -287,21 +313,21 @@
     "campaign1_name = 'PersonDoe-Campaign2019-1'\n",
     "campaign2_name = 'PersonDoe-Campaign2019-2'\n",
     "\n",
-    "\n",
+    "# Generate first Campaign Dataset\n",
     "firstCampaign_ds = campaign_dataset_generator(campaignName = campaign1_name, \\\n",
     "                                           weightArray = [.5, .5], \\\n",
     "                                           sample_size = size)\n",
-    "\n",
+    "# Generate second Campaign Dataset\n",
     "secondCampaign_ds = campaign_dataset_generator(campaignName = campaign2_name, \\\n",
     "                                            weightArray = [.53, .47], \\\n",
     "                                            sample_size = size)\n",
     "\n",
-    "# Concatenate matrices/arrays\n",
+    "# Concatenate datasets (particularly, matrices/arrays)\n",
     "combinedCampaigns = [*firstCampaign_ds, *secondCampaign_ds]\n",
     "\n",
     "columns = ['Date','Campaign','User_ID','Action']\n",
     "\n",
-    "\n",
+    "# Generate dataframe with combined Ad Campaign 1 & 2 datasets\n",
     "dfs = campaign_df_generator(combinedCampaigns, columns)\n",
     "\n",
     "campaign1 = dfs[0].reset_index(drop=True)\n",
@@ -846,6 +872,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Significance level\n",
     "alpha = 0.05"
    ]
   },
@@ -915,65 +942,6 @@
    "metadata": {},
    "source": [
     "But wait, what about  $\\alpha$ value?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x1 = np.linspace(-4,20,100)\n",
-    "# mean1 = np.mean(x1)\n",
-    "# std1 = np.std(x1)\n",
-    "\n",
-    "# y1 = scipy.stats.norm.pdf(x1,mean1,std1)\n",
-    "\n",
-    "\n",
-    "# x2 = np.linspace(6,30,100)\n",
-    "# mean2 = np.mean(x2)\n",
-    "# std2 = np.std(x2)\n",
-    "\n",
-    "# y2 = scipy.stats.norm.pdf(x2,mean2,std2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# deltaX = np.linspace(min(x2), z, 100)\n",
-    "# deltaY = y2-y1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# norm = scipy.stats.norm\n",
-    "\n",
-    "\n",
-    "# pepe_params = norm.fit(x1)\n",
-    "# modern_params = norm.fit(x2)\n",
-    "\n",
-    "# xmin = min(x1.min(), x2.min())\n",
-    "# xmax = max(x1.max(), x2.max())\n",
-    "# x = np.linspace(-15, 35, 100)\n",
-    "\n",
-    "# pepe_pdf = norm(*pepe_params).pdf(x)\n",
-    "# modern_pdf = norm(*modern_params).pdf(x)\n",
-    "# y = np.minimum(modern_pdf, pepe_pdf)\n",
-    "\n",
-    "# fig, ax = plt.subplots()\n",
-    "# ax.set_ylim(min(modern_pdf),max(modern_pdf))\n",
-    "# ax.axvline(1.96 * (np.std(x)/(np.sqrt(100)-1)) + np.mean(x) , color='red')\n",
-    "# ax.plot(x, pepe_pdf, color='blue')\n",
-    "# ax.plot(x, modern_pdf, color='orange')\n",
-    "# ax.fill_between(x, y, color='red', alpha=0.3)\n",
-    "# plt.show()"
    ]
   },
   {
