Add remaining slide attribute changes, post talk

--- a/PyData/2019/AB-Testing-Python/Code/1-ABTesting-Presentation-2019-Solutions.ipynb
+++ b/PyData/2019/AB-Testing-Python/Code/1-ABTesting-Presentation-2019-Solutions.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -25,6 +25,57 @@
     "\n",
     "    * **Repository Link:** [http://bit.ly/Raul-ABTesting-PyDataLA](http://bit.ly/Raul-ABTesting-PyDataLA)\n",
     "    * **Google Colab version** of [this Jupyter Noteobok](https://colab.research.google.com/drive/1AhcqoS584byUUwmjvimnxEpn1ho9n0uV#offline=true&sandboxMode=true)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#OS Items\n",
+    "import os\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "#Data Objects\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Statistical Packages\n",
+    "import scipy\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "#Visualizations\n",
+    "import seaborn as sns\n",
+    "sns.set_style(\"dark\")\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### Note: If package faker is not installed, \n",
+    "##### comment and apply the below package.\n",
+    "# !pip install faker\n",
+    "\n",
+    "# Other Packages\n",
+    "# !conda install pandas\n",
+    "# !conda install scipy\n",
+    "# !conda install numpy\n",
+    "# !conda install seaborn"
    ]
   },
   {
@@ -39,7 +90,12 @@
     "\n",
     "    * Data Analyst @Autodesk.\n",
     "    \n",
-    "    * Enjoying coffee, running, and working on side projects...whenever I can."
+    "    * Enjoying coffee, running, and working on side projects...whenever I can.\n",
+    "    \n",
+    "    * Social\n",
+    "        * Twitter: @RaulingAverage\n",
+    "        * Github: @CloudChaoszero\n",
+    "        * Website: [RaulingAverage.dev/](http://raulingaverage.dev/)"
    ]
   },
   {
@@ -104,57 +160,6 @@
    "source": [
     "Enjoy! :D\n",
     "____"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#OS Items\n",
-    "import os\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "#Data Objects\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Statistical Packages\n",
-    "import scipy\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "#Visualizations\n",
-    "import seaborn as sns\n",
-    "sns.set_style(\"dark\")\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "### Note: If package faker is not installed, \n",
-    "##### comment and apply the below package.\n",
-    "# !pip install faker\n",
-    "\n",
-    "# Other Packages\n",
-    "# !conda install pandas\n",
-    "# !conda install scipy\n",
-    "# !conda install numpy\n",
-    "# !conda install seaborn"
    ]
   },
   {
@@ -764,7 +769,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -776,7 +781,7 @@
    "execution_count": 14,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -789,7 +794,7 @@
    "execution_count": 15,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1235,8 +1240,18 @@
    "source": [
     "$\\alpha$ is our **Level of Significance**. \n",
     "\n",
-    "It is the the probability of the study rejecting the null hypothesis $H_0$, given that the null hypothesis were true.\n",
-    " \n",
+    "It is the the probability of the study rejecting the null hypothesis $H_0$, given that the null hypothesis were true."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\n",
     "Similarly, we have the Confidence Level, $1-\\alpha$. The Confidence Level is our probability of failing to reject the null hypothesis, given that it is true. \n",
     "\n",
     "However, there are two more calculated scenarios one must consider from their decision, $\\beta$ & $1-\\beta$."
@@ -1259,7 +1274,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -1274,7 +1289,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1554,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1703,6 +1718,177 @@
     "           [se1,se2], standardError, \\\n",
     "           tStatistic, criticalValue, \\\n",
     "           confInt, p_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**[Replica, for presentation purposes [Ignore]]**\n",
+    "```python\n",
+    "def ind_t_test(group1, group2, alpha = 0.05, output_bool=False, state_conclusion =False, express=False):\n",
+    "    \n",
+    "    # Step 1: Take the proportions of provided datasets:\n",
+    "    ## Create the proportion calculations: p_1, p_2 for the\n",
+    "    ## difference d. \n",
+    "    ## The first calculation step for our test.\n",
+    "    \n",
+    "    n1 = (group1['No Click'].sum() + group1['Click'].sum())\n",
+    "    p1 = group1['Click'].sum() / float(n1)\n",
+    "\n",
+    "    n2 = (group2['No Click'].sum() + group2['Click'].sum())\n",
+    "    p2 = group2['Click'].sum()  / float(n2)\n",
+    "\n",
+    "    d= p2 - p1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**[Replica, for presentation purposes [Ignore]]**\n",
+    "\n",
+    "```python\n",
+    "    # Step 2. Obtain the Standard Deviation:\n",
+    "    #    - Combined group Standard errors  \n",
+    "    ## Calculate the Standard Error for each proportions.\n",
+    "    ## This allows us to set up for the t-statistic calculation.\n",
+    "    p_overall = (group1['Click'].sum() + group2['Click'].sum() )/ (n1+n2)\n",
+    "    \n",
+    "    # Term 1\n",
+    "    ## Calculate the first term p_1 * (1-p_1) /n_1\n",
+    "    se1 = (p_overall * (1 - p_overall))/n1\n",
+    "    \n",
+    "    # Term 2\n",
+    "    ## Calculate the first term p_2 * (1-p_2) /n_2\n",
+    "    se2 = (p_overall * (1- p_overall))/n2\n",
+    "    \n",
+    "    ## Terms being squared for final result.\n",
+    "    ### SE = sqrt( SE_1 + SE_2)\n",
+    "    standardError = np.sqrt(float(se1) + float(se2))\n",
+    "    \n",
+    "    print('SE 1:', standardError)\n",
+    "\n",
+    "    #Step 3 t-statistic\n",
+    "    ## T statistic calculation.\n",
+    "    ### d / Standard Error, where d:= p2-p1\n",
+    "    tStatistic = (d-0) / standardError\n",
+    "\n",
+    "    # Degrees of Freedom\n",
+    "    ### (n_1-1) + (n_2-1) = (n_1 + n_2 -2)\n",
+    "    dof = (n1 + n2 - 2.0)\n",
+    "```    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**[Replica, for presentation purposes [Ignore]]**\n",
+    "\n",
+    "```python\n",
+    "    # Critical T Value Test Statistic\n",
+    "    criticalValue = scipy.stats.t.ppf(1.0 - alpha, df = dof)\n",
+    "\n",
+    "\n",
+    "    # Confidence Interval\n",
+    "    ### Tip: We'd like to avoid value of 0 in this CI\n",
+    "    confInt = [d - (criticalValue * standardError), d + (criticalValue * standardError)]\n",
+    "\n",
+    "    \n",
+    "    # Second type of decision criteria: |t| >= |t^*|.\n",
+    "    \n",
+    "\n",
+    "    # Step 4: Calculating p-value\n",
+    "    ## Two Sided P Value, P( |t| >= |t^*|).\n",
+    "    ### Calcualte the p-value using a Cumulative Density function\n",
+    "    ### from Scipy's stats.t.cdf(t-test, DoF) function\n",
+    "    \n",
+    "    p_val = (1 - scipy.stats.t.cdf(abs(tStatistic), df \\\n",
+    "                                   = (n1 + n2-2)) ) * 2.0\n",
+    "    \n",
+    "    if output_bool is True:\n",
+    "        print('Analysis:\\n\\n')\n",
+    "        print(f'Campaign {group1.Campaign[0]}\\'s CTR: {round(p1,4)}' \\\n",
+    "              + f' with Standard Error {se1}.')\n",
+    "        print(f'Campaign {group2.Campaign[3]}\\'s CTR: {round(p2,4)}' \\\n",
+    "              + f' with Standard Error {se2}.\\n')\n",
+    "        \n",
+    "        print(f\"Confidence Interval {confInt}\")\n",
+    "        print(f'T Statistic: {round(tStatistic, 2)}\\n')\n",
+    "        \n",
+    "        print(f'We have critical value t^* at {round(criticalValue, 2)}' + \\\n",
+    "              f'\\nand p-value of {round(p_val, 2)}')\n",
+    "        \n",
+    "        print(f'\\n\\nComponents for variants Campaign {group1.Campaign[0]}\\'s \\n& ' + \\\n",
+    "              f'Campaign {group2.Campaign[3]}\\'s, respectively:')\n",
+    "        \n",
+    "        print(f'Difference d: {d}')\n",
+    "        \n",
+    "        print(f'SE terms within SE calculation: {[se1,se2]}')\n",
+    "        print(f'SE: {standardError}')\n",
+    "        \n",
+    "        print(f'Calcualted T-statistic: {tStatistic}')\n",
+    "        print(f'T critical value: {criticalValue}')\n",
+    "    \n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**[Replica, for presentation purposes [Ignore]]**\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "    #Step 5 Statemtent of declaration & Decision        \n",
+    "    if state_conclusion is True:\n",
+    "        if express is False:\n",
+    "            # Restate our decision process\n",
+    "            print('Conclusion:\\n\\n')\n",
+    "\n",
+    "            print(f'If the p-value is less than our defined alpha = {alpha}, then we' +\\\n",
+    "                  ' reject the null hypothesis H_0.\\nIf not, then we fail to reject the' +\\\n",
+    "                  ' null hypothesis H_0.')\n",
+    "\n",
+    "            print(f'Confidence Interval: {confInt}')\n",
+    "            print(f'P-value: {p_val}')\n",
+    "            print(f'Alpha: {alpha}')\n",
+    "        \n",
+    "        if p_val < alpha:\n",
+    "            print('\\nWe reject the Null Hypothesis H_0')\n",
+    "            print('Therefore, we can say that there is a statistical ' + \\\n",
+    "            'difference between the two campaigns.')\n",
+    "\n",
+    "        else:\n",
+    "            print('\\nWe fail to reject the Null Hypothesis H_0')\n",
+    "            print('\\nTherefore, we can say that there is no statistical' + \\\n",
+    "            ' significant difference between the two campaigns.')\n",
+    "    return([p1,p2], [n1,n2], \\\n",
+    "           [se1,se2], standardError, \\\n",
+    "           tStatistic, criticalValue, \\\n",
+    "           confInt, p_val)\n",
+    "```"
    ]
   },
   {
