Update indexes with back to site reference

--- a/index.ipynb
+++ b/index.ipynb
@@ -9,18 +9,35 @@
    },
    "source": [
     "# Presentations\n",
+    "<img src=\"Resources/PresentationGif-Raul.gif\" alt=\"Presentation\" height=\"80\" width=\"80\">\n",
     "\n",
-    "![Presentation GIF](Resources/PresentationGif-Raul.gif)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "\n",
     "## Introduction\n",
     "\n",
     "This repository is a compilation of all documents and resources for talks I have spoken at in San Francisco, Ca.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "## Table of Contents\n",
+    "Lightning-Talk-ProtosAndJSON\n",
+    "\n",
+    "1. [PyData LA 2019: AB Testing](PyData-LA/AB-Testing-Python)\n",
+    "\n",
+    "2. [PyBay 2019: AB Testing](PyBayTalks/2019/AB-Testing-Python)\n",
+    "\n",
+    "3. [Flask and SQLAlchemy Demonstration](SF-Python/Flask-SQLAlchemy-Demo/)\n",
+    "\n",
+    "4. [Proto Buffs VS JSON structures](PyBayTalks/2018/Lightning-Talk-ProtosAndJSON)\n",
+    "\n",
+    "5. [Takes Two to Data Clean](SF-Python/TakesTwoToDatclean/)"
    ]
   },
   {
@@ -42,24 +59,6 @@
     "3. Takes Two to Data Clean\n",
     "\n",
     "    a. [Video](https://www.youtube.com/watch?v=OjT7mT5Ydw0&t=11s)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "\n",
-    "## Table of Contents\n",
-    "\n",
-    "1. [Flask and SQLAlchemy Demonstration](Flask-SQLAlchemy-Demo/)\n",
-    "\n",
-    "2. [Proto Buffs VS JSON structures](PyBayTalks/ProtosAndJSON/)\n",
-    "\n",
-    "3. [Takes Two to Data Clean](TakesTwoToDatclean/)"
    ]
   }
  ],
