Update directory path

--- a/index.ipynb
+++ b/index.ipynb
@@ -8,13 +8,11 @@
     }
    },
    "source": [
-    "# Presentations\n",
-    "<img src=\"Resources/PresentationGif-Raul.gif\" alt=\"Presentation\" height=\"80\" width=\"80\">\n",
+    "# <center> Presentations </center>\n",
+    "<img src=\"Resources/PresentationGif-Raul.gif\" alt=\"Presentation\" height=\"400\" width=\"400\">\n",
     "\n",
     "\n",
-    "## Introduction\n",
-    "\n",
-    "This repository is a compilation of all documents and resources for talks I have spoken at in San Francisco, Ca.\n"
+    "The following are a list of presentation slide decks & videos I have done in the past. "
    ]
   },
   {
@@ -26,39 +24,39 @@
    },
    "source": [
     "\n",
-    "## Table of Contents\n",
-    "Lightning-Talk-ProtosAndJSON\n",
+    "## Slide decks\n",
     "\n",
-    "1. [PyData LA 2019: AB Testing](PyData-LA/AB-Testing-Python)\n",
     "\n",
-    "2. [PyBay 2019: AB Testing](PyBayTalks/2019/AB-Testing-Python)\n",
+    "### 2020\n",
+    "* [BayPiggies 2020: Survival Analysis w/Lifelines](https://raulingaverage.dev/Presentations/BayPiggies/Survival-Analysis/#/)\n",
     "\n",
-    "3. [Flask and SQLAlchemy Demonstration](SF-Python/Flask-SQLAlchemy-Demo/)\n",
+    "### 2019\n",
     "\n",
-    "4. [Proto Buffs VS JSON structures](PyBayTalks/2018/Lightning-Talk-ProtosAndJSON)\n",
+    "* [PyData LA 2019: AB Testing in Python](PyData-LA/AB-Testing-Python)\n",
     "\n",
-    "5. [Takes Two to Data Clean](SF-Python/TakesTwoToDatclean/)"
+    "    * [Video](https://www.youtube.com/watch?v=r6Z8FyCJ1g8)\n",
+    "    \n",
+    "* [PyBay 2019: AB Testing in Python](PyBayTalks/2019/AB-Testing-Python)\n",
+    "    * [Video](https://www.youtube.com/watch?v=QWeMYnlNtzY)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
+    "### 2018\n",
     "\n",
-    "## Videos & Decks\n",
+    "* [PyBay 2018: Flask and SQLAlchemy Demonstration Lightning Talk](SF-Python/Flask-SQLAlchemy-Demo/)\n",
+    "    * [Video](https://youtu.be/XUsx9odu94Y?t=372)\n",
     "\n",
-    "1. Flask and SQLAlchemy Demo\n",
+    "* [PyBay 2018: Proto Buffs VS JSON structures Lightning Talk](PyBayTalks/2018/Lightning-Talk-ProtosAndJSON)\n",
     "\n",
-    "    * a. [Slide Deck](https://docs.google.com/presentation/d/118XmBmommV-THg-2MU-qW3dUP9sKKxbKeLjHK5B2Dnw/edit)\n",
-    "    * b. [Video](https://youtu.be/XUsx9odu94Y?t=372)\n",
-    "\n",
-    "2. Protos VS JSON\n",
-    "\n",
-    "    a. [Slide Deck](https://github.com/CloudChaoszero/Presentations/blob/master/PyBayTalks/ProtosAndJSON/Protocol-JSON-AndMore%20(1).pptx)\n",
-    "\n",
-    "3. Takes Two to Data Clean\n",
-    "\n",
-    "    a. [Video](https://www.youtube.com/watch?v=OjT7mT5Ydw0&t=11s)\n"
+    "* [SF Python 2018: Takes Two to Data Clean Lightning Talk](SF-Python/TakesTwoToDatclean/)\n",
+    "    * [Video](https://www.youtube.com/watch?v=OjT7mT5Ydw0&t=11s)\n"
    ]
   }
  ],
