--- a/BayPiggies/Survival-Analysis/Survival-Analysis-Lifelines.ipynb
+++ b/BayPiggies/Survival-Analysis/Survival-Analysis-Lifelines.ipynb
@@ -35,8 +35,7 @@
     "\n",
     "* Data Analyst @ Autodesk\n",
     "* You can find me at [RaulingAverage.dev](http://raulingaverage.dev/)\n",
-    "* Enjoy Coffee, Learning, and Running..near the beach\n",
-    "As we are aware\n"
+    "* Enjoy Coffee, Learning, and Running..near the beach\n"
    ]
   },
   {
@@ -470,14 +469,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "source": [
-    "\n",
-    "<img src=\"resources/images/Survival-Curve-1st-Example.png\" alt=\"Survival Curve Example\" class=\"center\">"
+    "<center>  Another recent example...</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">Look at Table 5. First it&#39;s amazing to see a paper w/ &gt;1,100 vented <a href=\"https://twitter.com/hashtag/Covid19?src=hash&amp;ref_src=twsrc%5Etfw\">#Covid19</a> pts. But of these 1151 vented pts, *at a median follow-up time of 4.5d* only 38 went home, 282 died, while 831 were still hospitalized. 282/(38+282) = 88% mortality. But thats *quite* misleading👇(4/x) <a href=\"https://t.co/za3S6qEBFj\">pic.twitter.com/za3S6qEBFj</a></p>&mdash; John W Scott, MD MPH (@DrJohnScott) <a href=\"https://twitter.com/DrJohnScott/status/1253284903602528256?ref_src=twsrc%5Etfw\">April 23, 2020</a></blockquote> <script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
    ]
   },
   {
@@ -500,7 +501,7 @@
    },
    "source": [
     "## <center>  Censoring</center>\n",
-    "* If we look at the following image, we observe one case where people have not experiences some occurence, and continue to persist. ff we take the mean of these data points, we are underestimate the average because those who continue to stay alive after time t, skew our average.\n",
+    "* If we look at the following image, we observe one case where people have not experiences some occurence, and continue to persist. If we take the mean of these data points, we are underestimate the average because those who continue to stay alive after time t, skew our average.\n",
     "\n",
     "* And if we only consider one segmentation of individuals, say those who had their event of occurence happen, we too still underestimate our average of the values.\n",
     "\n",
