Add embedded tweet and minor grammar fixes

--- a/BayPiggies/Survival-Analysis/Survival-Analysis-Lifelines.ipynb
+++ b/BayPiggies/Survival-Analysis/Survival-Analysis-Lifelines.ipynb
@@ -469,14 +469,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "<center>  Another recent example...</center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "<blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">Look at Table 5. First it&#39;s amazing to see a paper w/ &gt;1,100 vented <a href=\"https://twitter.com/hashtag/Covid19?src=hash&amp;ref_src=twsrc%5Etfw\">#Covid19</a> pts. But of these 1151 vented pts, *at a median follow-up time of 4.5d* only 38 went home, 282 died, while 831 were still hospitalized. 282/(38+282) = 88% mortality. But thats *quite* misleading👇(4/x) <a href=\"https://t.co/za3S6qEBFj\">pic.twitter.com/za3S6qEBFj</a></p>&mdash; John W Scott, MD MPH (@DrJohnScott) <a href=\"https://twitter.com/DrJohnScott/status/1253284903602528256?ref_src=twsrc%5Etfw\">April 23, 2020</a></blockquote> <script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
    ]
