Add embedded tweet and minor grammar fixes

--- a/BayPiggies/Survival-Analysis/Survival-Analysis-Lifelines.ipynb
+++ b/BayPiggies/Survival-Analysis/Survival-Analysis-Lifelines.ipynb
@@ -464,7 +464,9 @@
     "\n",
     "Because of the start and end date of these customer, we can observe these customer's life expectancies (or their churn) over time **t**, seen below:\n",
     "\n",
-    "Moreover, there are nice properties of this implementation we can utilize to ensure we have an accurate depiction of observing the event of interest, in our case churn, over time."
+    "Moreover, there are nice properties of this implementation we can utilize to ensure we have an accurate depiction of observing the event of interest, in our case churn, over time.\n",
+    "\n",
+    "<img src=\"resources/images/Survival-Curve-1st-Example.png\" alt=\"Survival Curve Example\" class=\"center\">"
    ]
   },
   {
