Publish Prefect Presentation to website

--- a/index.ipynb
+++ b/index.ipynb
@@ -28,6 +28,9 @@
     "\n",
     "\n",
     "### 2020\n",
+    "\n",
+    "* [SF Python 2020: A Primer on Prefect](https://raulingaverage.dev/Presentations/SF-Python/Prefect-Overview)\n",
+    "\n",
     "* [BayPiggies 2020: Survival Analysis w/Lifelines](https://raulingaverage.dev/Presentations/BayPiggies/Survival-Analysis/#/)\n",
     "\n",
     "### 2019\n",
